# cantoral-api

./: .dockerignore  .env.kamal.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.docs.yml  manage.py  pyproject.toml  skills-lock.json
.envs/.local/: .django  .postgres
.envs/.production/: .django  .postgres
.github/workflows/: ci.yml
.kamal/: secrets
Plans/: scalable-splashing-porcupine.md
cc/: conftest.py
cc/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
cc/playlists/: admin.py  apps.py  models.py  services.py
cc/playlists/api/: permissions.py  serializers.py  urls.py  views.py
cc/playlists/migrations/: 0001_initial.py
cc/playlists/tests/: factories.py
cc/playlists/tests/api/: test_views.py
cc/songs/: admin.py  filters.py  importer.py  models.py  queries.py  services.py  tasks.py
cc/songs/api/: permissions.py  serializers.py  urls.py  views.py
cc/songs/extraction/: __init__.py  agents.py  extractor.py  manager.py
cc/songs/lyrics/: parser.py  transport.py
cc/songs/management/commands/: assign_song_lyrics.py  import_songs.py  sync_verses.py
cc/songs/migrations/: 0001_initial.py  0002_add_image_bio_slug_to_author.py  0003_add_slug_parent_to_tag.py  0004_alter_author_slug_alter_tag_slug.py  0005_add_slug_to_song.py  0006_alter_song_slug.py  0007_verse.py  0008_add_source_image_url_to_song.py  0009_add_favorite_model.py
cc/songs/tests/: factories.py  test_extraction.py  test_importer.py  test_lyrics_parser.py  test_management_commands.py  test_queries.py  test_tasks.py  test_verse_model.py
cc/songs/tests/api/: base.py  test_authors_crud.py  test_element_filters.py  test_favorites.py  test_song_filters.py  test_song_improvements.py  test_song_performance.py  test_songs_crud.py  test_tags_crud.py  test_views.py
cc/templates/: base.html
cc/templates/admin/songs/song/: change_list.html  (+1 more)
cc/users/: admin.py  apps.py  emails.py  forms.py  models.py  services.py  tokens.py
cc/users/api/: auth_views.py  profile_views.py  serializers.py  views.py
cc/users/management/commands/: create_admin_user.py
cc/users/migrations/: 0001_initial.py  0002_user_can_create_playlists_user_can_create_songs_and_more.py
cc/users/tests/: factories.py  test_admin.py  test_managers.py  test_models.py
cc/users/tests/api/: test_auth_views.py  test_openapi.py  test_profile_views.py  test_urls.py  test_views.py
cc/utils/: authentication.py  emails.py  middleware.py  mixins.py  pagination.py  queries.py  responses.py  tasks.py  throttles.py  views.py
cc/utils/tests/: test_authentication.py
config/: api_router.py  celery.py  deploy.yml  urls.py  views.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docker/: entrypoint.sh
docs/: Makefile  api.md  conf.py  howto.rst  index.rst  make.bat
docs/app/: README.md  architecture.md  lyrics-editor-implementation.md  lyrics-editor.md  routes.md  services.md  song-from-image.md  song-sample-response.md
docs/reports/: authors-crud-report.md
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
(+2 files in other folders)
