[project]
name = "cc"
version = "0.1.0"
description = "Cantoral"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "David Gaitan", email = "david-gaitan@cantoralcatolico.org" },
]
requires-python = "==3.14.*"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "anthropic>=0.112.0",
  "argon2-cffi==25.1.0",
  "celery[redis]>=5.3.1",
  "django==6.0.6",
  "django-cors-headers==4.9.0",
  "django-environ==0.14.0",
  "django-model-utils==5.0.0",
  "django-redis==7.0.0",
  "djangorestframework==3.17.1",
  "djangorestframework-simplejwt==5.5.1",
  "drf-spectacular==0.29.0",
  "google-genai>=2.10.0",
  "gunicorn==26.0.0",
  "hiredis==3.4.0",
  "psycopg[c]==3.3.4",
  "python-slugify==8.0.4",
  "redis==8.0.1",
]

[dependency-groups]
dev = [
  "coverage==7.14.3",
  "django-coverage-plugin==3.2.2",
  "django-debug-toolbar==6.3.0",
  "django-stubs[compatible-mypy]==6.0.6",
  "djangorestframework-stubs==3.17.0",
  "factory-boy==3.3.3",
  "ipdb==0.13.13",
  "mypy==2.1.0",
  "pre-commit==4.6.0",
  "psycopg[binary]==3.3.4",
  "pytest==9.1.1",
  "pytest-django==4.12.0",
  "pytest-sugar==1.1.1",
  "ruff==0.15.20",
]

# ==== ruff ====
[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
  "*/migrations/*.py",
  "staticfiles/*",
]

lint.select = [
  "A",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FBT",
  "FLY",
  "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "S101",   # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "SIM102", # sometimes it's better to nest
  # of types for comparison.
  # Deactivated because it can make the code slow:
  # https://github.com/astral-sh/ruff/issues/7871
]
lint.isort.force-single-line = false

# ==== pyproject-fmt ====
[tool.pyproject-fmt]
keep_full_version = true

# ==== pytest ====
[tool.pytest.ini_options]
addopts = [
  "--ds=config.settings.test",
  "--import-mode=importlib",
  "--strict-markers",
]
minversion = "9.0"
python_files = [
  "tests.py",
  "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = [ "cc/**" ]
omit = [ "*/migrations/*", "*/tests/*" ]
plugins = [ "django_coverage_plugin" ]

# ==== mypy ====
[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"
